# qgis_devtools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yaml  02_feature_request.yaml  config.yml
src/devtools/: __init__.py  devtools_interface.py  devtools_plugin.py  devtools_plugin_stub.py  metadata.txt
src/devtools/core/: compat.py  constants.py  enums.py  exceptions.py  logging.py  settings.py  utils.py
src/devtools/debug/: debug_interface.py  debug_manager.py  debug_settings.py  enums.py  exceptions.py
src/devtools/debug/adapters/: abstract_debug_adapter.py
src/devtools/debug/adapters/debugpy/: __init__.py  debugpy_adapter.py  debugpy_settings.py
src/devtools/debug/adapters/debugpy/ui/: debugpy_settings_page.py  debugpy_settings_page_base.ui
src/devtools/debug/ui/: debug_button.py  debug_settings_page.py  debug_settings_page_base.ui  status_widget_base.ui
src/devtools/i18n/: devtools_ru.ts
src/devtools/notifier/: message_bar_notifier.py  notifier_interface.py
src/devtools/shared/: qobject_metaclass.py
src/devtools/shared/ui/: __init__.py  flashing_push_button.py  flashing_tool_button.py  waiting_dialog.py  waiting_dialog_base.ui
src/devtools/ui/: about_dialog.py  devtools_settings_page.py  devtools_settings_page_base.ui  utils.py
